--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,12 @@ main {
     height: 500px;
     margin-bottom: 20px;
     border: 1px solid var(--clr-dark);
+    display: flex;
+    flex-wrap: wrap;
+}
+.square{
+    border: 1px solid var(--clr-dark);
+    padding:2px;
 }
 @media only screen and (max-width: 600px) {
     main{
